[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Editor/editor.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Editor/editor_camera.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Editor/DefaultMapScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Editor/shape_drawing.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Editor/WHITE_PIXEL.png" type="Texture" id=5]

[node name="Editor" type="Node2D"]
script = ExtResource( 1 )

[node name="Map" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 345, 0 )

[node name="Display" type="Node2D" parent="."]

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="Canvas"]
margin_right = 350.0
margin_bottom = 1080.0

[node name="Buttons" type="VBoxContainer" parent="Canvas"]
margin_right = 350.0
margin_bottom = 1023.0

[node name="PanSpeed" type="Control" parent="Canvas"]
margin_right = 40.0
margin_bottom = 40.0

[node name="HSlider" type="HSlider" parent="Canvas/PanSpeed"]
margin_top = 1061.0
margin_right = 348.0
margin_bottom = 1078.0
min_value = 1.0
value = 1.0

[node name="Label" type="Label" parent="Canvas/PanSpeed"]
margin_left = 2.0
margin_top = 1046.0
margin_right = 348.0
margin_bottom = 1060.0
text = "Camera Pan Speed:"

[node name="CameraPos" type="Label" parent="Canvas"]
margin_left = 352.0
margin_top = 3.0
margin_right = 392.0
margin_bottom = 17.0
text = "Camera Position:"

[node name="CameraPosReset" type="Button" parent="Canvas"]
margin_left = 353.0
margin_top = 19.0
margin_right = 401.0
margin_bottom = 39.0
text = "Origin"

[node name="Shape" type="Control" parent="Canvas"]
script = ExtResource( 4 )

[node name="Vertex" type="Sprite" parent="Canvas/Shape"]
texture = ExtResource( 5 )
__meta__ = {
"_editor_description_": "YXNlcHJpdGVfd2l6YXJkX2NvbmZpZwpwbGF5ZXJ8PQpzb3VyY2V8PQpsYXllcnw9Cm9wX2V4cHw9VHJ1ZQpvX2ZvbGRlcnw9Cm9fbmFtZXw9Cm9ubHlfdmlzaWJsZXw9RmFsc2UKb19leF9wfD0K"
}

[node name="Camera" type="Node2D" parent="."]
position = Vector2( 960, 540 )

[node name="Camera2D" type="Camera2D" parent="Camera"]
rotating = true
current = true
script = ExtResource( 2 )

[connection signal="pressed" from="Canvas/CameraPosReset" to="." method="_on_CameraPosReset_pressed"]
